--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,4 @@
-/*
- * Copyright 2018, The Android Open Source Project
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- *
- */
+/*...*/
 
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
@@ -25,7 +10,7 @@ android {
     compileSdkVersion 29
     defaultConfig {
         resConfigs "en"
-        applicationId "com.example.android.marsrealestate"
+        applicationId "maxeem.america.mars"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
@@ -58,7 +43,7 @@ dependencies {
     kapt "com.github.bumptech.glide:compiler:4.9.0"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
-    implementation 'androidx.core:core-ktx:1.0.2'
+    implementation 'androidx.core:core-ktx:1.2.0-alpha03'
     implementation 'androidx.fragment:fragment-ktx:1.2.0-alpha02'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha03'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha03'
@@ -68,6 +53,11 @@ dependencies {
     implementation 'androidx.navigation:navigation-runtime-ktx:2.2.0-alpha01'
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.0-alpha01'
     implementation "com.github.bumptech.glide:glide:4.9.0"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
+    implementation "com.squareup.moshi:moshi:1.8.0"
+    implementation "com.squareup.moshi:moshi-kotlin:1.8.0"
+    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.6.1'
     implementation "org.jetbrains.anko:anko-commons:0.10.8"
     implementation "org.jetbrains.anko:anko-design:0.10.8"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
