--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,13 +14,19 @@ android {
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
-        versionName "1.0"
+        versionName "0.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
+            applicationIdSuffix '.demo'
+            versionNameSuffix '-demo'
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            applicationIdSuffix '.dev'
+            versionNameSuffix '-dev'
         }
     }
     dataBinding {
@@ -52,7 +58,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0-alpha01'
     implementation 'androidx.navigation:navigation-runtime-ktx:2.2.0-alpha01'
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.0-alpha01'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
     implementation "com.github.bumptech.glide:glide:4.9.0"
+    implementation "com.google.android.material:material:1.1.0-alpha09"
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
     implementation "com.squareup.moshi:moshi:1.8.0"
     implementation "com.squareup.moshi:moshi-kotlin:1.8.0"
