--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,26 +46,26 @@ android {
 }
 
 dependencies {
-    kapt "com.github.bumptech.glide:compiler:4.9.0"
+    kapt "com.github.bumptech.glide:compiler:4.10.0"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
-    implementation 'androidx.core:core-ktx:1.2.0-alpha04'
-    implementation 'androidx.fragment:fragment-ktx:1.2.0-alpha04'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha05'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha05'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha05'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:1.0.0-alpha05'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0-alpha03'
-    implementation 'androidx.navigation:navigation-runtime-ktx:2.2.0-alpha03'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.2.0-alpha03'
+    implementation 'androidx.core:core-ktx:1.2.0-beta01'
+    implementation 'androidx.fragment:fragment-ktx:1.2.0-beta02'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-beta01'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-beta01'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-beta01'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:1.0.0-beta01'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0-beta01'
+    implementation 'androidx.navigation:navigation-runtime-ktx:2.2.0-beta01'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.2.0-beta01'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
-    implementation "com.github.bumptech.glide:glide:4.9.0"
-    implementation "com.google.android.material:material:1.1.0-alpha10"
+    implementation "com.github.bumptech.glide:glide:4.10.0"
+    implementation "com.google.android.material:material:1.1.0-beta01"
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
     implementation "com.squareup.moshi:moshi:1.8.0"
     implementation "com.squareup.moshi:moshi-kotlin:1.8.0"
-    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
-    implementation 'com.squareup.retrofit2:converter-moshi:2.6.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.6.2'
     implementation "org.jetbrains.anko:anko-commons:0.10.8"
     implementation "org.jetbrains.anko:anko-design:0.10.8"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
